Add hero section's markup

--- a/index.html
+++ b/index.html
@@ -6,11 +6,32 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Intro Form</title>
 
-<!-- Stylesheets -->
-<link rel="stylesheet" href="css/normalize.css">
-<link rel="stylesheet" href="css/styles.css">
+  <!-- Stylesheets -->
+  <link rel="stylesheet" href="css/normalize.css">
+  <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
+
+  <div class="main-content">
+    <div class="container">
+      <!-- INTRO-PAGE-BEGIN -->
+      <div class="intro-page">
+        <!-- HERO-BEGIN -->
+        <div class="hero">
+          <div class="hero-main">
+            <div class="hero-badge">frontend and backend</div>
+            <h1 class="hero-heading">Learn to program by watching professionals</h1>
+            <p class="hero-text">See how experienced developers solve problems in real time</p>
+          </div>
+          <div class="hero-bottom"><strong>Try it free 7 days,</strong> then $20/mo</div>
+        </div>
+        <!-- HERO-END -->
+        <!-- REGISTRATION-FORM-BEGIN -->
+        <!-- REGISTRATION-FORM-END -->
+      </div>
+      <!-- INTRO-PAGE-END -->
+    </div>
+  </div>
 
 
   <script src="js/main.js"></script>
